<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aweseomness.ad.punwars.SignupActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:textSize="50dp"
    android:text="@string/app_name"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="40dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/usernameEt"
        android:inputType="textPersonName"
        android:hint="@string/username"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />l

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/emailEt"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/passwordEt"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/password2Et"
        android:inputType="textPassword"
        android:hint="@string/cfmpass"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/cancelButt"
        android:text="@string/cancel"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:id="@+id/signupButt"
        android:text="@string/sign_up"/>
    </RelativeLayout>

</LinearLayout>
</RelativeLayout>