<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aweseomness.ad.punwars.LoginActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:textSize="50dp"
    android:text="@string/app_name"/>

<ProgressBar
    android:id="@+id/loading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:indeterminate="true"
    android:visibility="gone"
    android:layout_centerInParent="true"
    />

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_centerInParent="true"
android:padding="40dp"
android:orientation="vertical">

<TextView
    android:text="@string/log_in"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:textSize="30sp"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/usernameEt"
    android:inputType="textShortMessage"
    android:hint="@string/username"/>

<Space
    android:layout_width="match_parent"
    android:layout_height="10dp" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/passwordEt"
    android:inputType="textPassword"
    android:hint="@string/password"/>

<Space
    android:layout_width="match_parent"
    android:layout_height="25dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_weight="1"
        android:id="@+id/signupButt"
        android:text="@string/sign_up"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:id="@+id/loginButt"
        android:text="@string/log_in"/>
</LinearLayout>

</LinearLayout>

</RelativeLayout>